--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,19 @@
 # Telegram Bot Token from @BotFather
 BOT_TOKEN=your_bot_token_here
 
-# Optional: Enable fast schedule for testing (notifications every 60 seconds)
-# DEBUG_FAST_SCHEDULE=1
+# Admin ID (for feedback system)
+ADMIN_ID=your_admin_user_id
+
+# Database Options (choose one)
+
+# Option 1: SQLite (default, no configuration needed)
+# No additional variables needed
+
+# Option 2: PostgreSQL
+# DATABASE_URL=postgresql://user:password@localhost:5432/exam_bot
+
+# Option 3: Firestore (Google Cloud)
+# USE_FIRESTORE=1
+# FIREBASE_PROJECT_ID=your-firebase-project-id
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/firebase-key.json
+
